# django_drf

./: README.md  install.txt  pyproject.toml  specification
fin_management/budget/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
fin_management/category/: models.py  permissions.py  serializers.py  urls.py  views.py
fin_management/config/: celery.py  enums.py  paginations.py  permissions.py  service.py  settings.py  tasks.py  test_data.py  urls.py
fin_management/user/: models.py  permissions.py  renderers.py  serializers.py  service.py  urls.py  views.py
